// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|Dashboard Grid dashboard, custom layout 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="storybook-container"
      style={
        Object {
          "padding": "3rem",
        }
      }
    >
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        Passes a custom layout to the dashboard grid. Only the lg and md breakpoint have a custom layout defined. Resize the screen to see the cards reposition and resize themselves at different layouts.
        <div
          style={
            Object {
              "width": "calc(100vw - 6rem)",
            }
          }
        >
          <div
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <div
              className="react-grid-layout DashboardGrid__StyledGridLayout-vxs00g-0 hTrCDO"
              style={
                Object {
                  "height": "448px",
                }
              }
            >
              <div
                className="react-grid-item cssTransforms Card__CardWrapper-v5r71h-0 SYfLr"
                content="My Facility Metrics"
                id="facility"
                style={
                  Object {
                    "MozTransform": "translate(332px,160px)",
                    "OTransform": "translate(332px,160px)",
                    "WebkitTransform": "translate(332px,160px)",
                    "height": "272px",
                    "msTransform": "translate(332px,160px)",
                    "position": "absolute",
                    "transform": "translate(332px,160px)",
                    "width": "300px",
                  }
                }
                type="VALUE"
              >
                <div
                  className="card--header"
                >
                  <span
                    className="card--title"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    title="Facility Metrics"
                  >
                    <div
                      className="title--text"
                    >
                      Facility Metrics
                    </div>
                  </span>
                  <div
                    className="card--toolbar"
                  />
                </div>
                <div
                  className="Card__CardContent-v5r71h-1 ioQZbN"
                />
              </div>
              <div
                className="react-grid-item cssTransforms Card__CardWrapper-v5r71h-0 HsjmT"
                content="My Humidity Values"
                id="humidity"
                style={
                  Object {
                    "MozTransform": "translate(16px,16px)",
                    "OTransform": "translate(16px,16px)",
                    "WebkitTransform": "translate(16px,16px)",
                    "height": "128px",
                    "msTransform": "translate(16px,16px)",
                    "position": "absolute",
                    "transform": "translate(16px,16px)",
                    "width": "142px",
                  }
                }
                type="VALUE"
              >
                <div
                  className="card--header"
                >
                  <span
                    className="card--title"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    title="Humidity"
                  >
                    <div
                      className="title--text"
                    >
                      Humidity
                    </div>
                  </span>
                  <div
                    className="card--toolbar"
                  />
                </div>
                <div
                  className="Card__CardContent-v5r71h-1 cZyqBY"
                />
              </div>
              <div
                className="react-grid-item cssTransforms Card__CardWrapper-v5r71h-0 HsjmT"
                content="My utilization chart"
                id="utilization"
                style={
                  Object {
                    "MozTransform": "translate(253px,16px)",
                    "OTransform": "translate(253px,16px)",
                    "WebkitTransform": "translate(253px,16px)",
                    "height": "128px",
                    "msTransform": "translate(253px,16px)",
                    "position": "absolute",
                    "transform": "translate(253px,16px)",
                    "width": "142px",
                  }
                }
                type="VALUE"
              >
                <div
                  className="card--header"
                >
                  <span
                    className="card--title"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    title="Utilization"
                  >
                    <div
                      className="title--text"
                    >
                      Utilization
                    </div>
                  </span>
                  <div
                    className="card--toolbar"
                  />
                </div>
                <div
                  className="Card__CardContent-v5r71h-1 cZyqBY"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        className="info__show-button"
        onClick={[Function]}
        style={
          Object {
            "background": "#027ac5",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|Dashboard Grid dashboard, default layouts 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="storybook-container"
      style={
        Object {
          "padding": "3rem",
        }
      }
    >
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        Resize your window to see the callback handlers get triggered in the Actions tab.
        <div
          style={
            Object {
              "width": "calc(100vw - 6rem)",
            }
          }
        >
          <div
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <div
              className="react-grid-layout DashboardGrid__StyledGridLayout-vxs00g-0 hTrCDO"
              style={
                Object {
                  "height": "304px",
                }
              }
            >
              <div
                className="react-grid-item cssTransforms Card__CardWrapper-v5r71h-0 SYfLr"
                content="My Facility Metrics"
                id="facility"
                style={
                  Object {
                    "MozTransform": "translate(16px,16px)",
                    "OTransform": "translate(16px,16px)",
                    "WebkitTransform": "translate(16px,16px)",
                    "height": "272px",
                    "msTransform": "translate(16px,16px)",
                    "position": "absolute",
                    "transform": "translate(16px,16px)",
                    "width": "300px",
                  }
                }
                type="VALUE"
              >
                <div
                  className="card--header"
                >
                  <span
                    className="card--title"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    title="Facility Metrics"
                  >
                    <div
                      className="title--text"
                    >
                      Facility Metrics
                    </div>
                  </span>
                  <div
                    className="card--toolbar"
                  />
                </div>
                <div
                  className="Card__CardContent-v5r71h-1 ioQZbN"
                />
              </div>
              <div
                className="react-grid-item cssTransforms Card__CardWrapper-v5r71h-0 HsjmT"
                content="My Humidity Values"
                id="humidity"
                style={
                  Object {
                    "MozTransform": "translate(332px,16px)",
                    "OTransform": "translate(332px,16px)",
                    "WebkitTransform": "translate(332px,16px)",
                    "height": "128px",
                    "msTransform": "translate(332px,16px)",
                    "position": "absolute",
                    "transform": "translate(332px,16px)",
                    "width": "142px",
                  }
                }
                type="VALUE"
              >
                <div
                  className="card--header"
                >
                  <span
                    className="card--title"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    title="Humidity"
                  >
                    <div
                      className="title--text"
                    >
                      Humidity
                    </div>
                  </span>
                  <div
                    className="card--toolbar"
                  />
                </div>
                <div
                  className="Card__CardContent-v5r71h-1 cZyqBY"
                />
              </div>
              <div
                className="react-grid-item cssTransforms Card__CardWrapper-v5r71h-0 HsjmT"
                content="My utilization chart"
                id="utilization"
                style={
                  Object {
                    "MozTransform": "translate(490px,16px)",
                    "OTransform": "translate(490px,16px)",
                    "WebkitTransform": "translate(490px,16px)",
                    "height": "128px",
                    "msTransform": "translate(490px,16px)",
                    "position": "absolute",
                    "transform": "translate(490px,16px)",
                    "width": "142px",
                  }
                }
                type="VALUE"
              >
                <div
                  className="card--header"
                >
                  <span
                    className="card--title"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    title="Utilization"
                  >
                    <div
                      className="title--text"
                    >
                      Utilization
                    </div>
                  </span>
                  <div
                    className="card--toolbar"
                  />
                </div>
                <div
                  className="Card__CardContent-v5r71h-1 cZyqBY"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        className="info__show-button"
        onClick={[Function]}
        style={
          Object {
            "background": "#027ac5",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|Dashboard Grid dashboard, is Edtiable 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="storybook-container"
      style={
        Object {
          "padding": "3rem",
        }
      }
    >
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        You can drag and drop the cards around. Watch the handler get triggered on the Actions tab.
        <div
          style={
            Object {
              "width": "calc(100vw - 6rem)",
            }
          }
        >
          <div
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <div
              className="react-grid-layout DashboardGrid__StyledGridLayout-vxs00g-0 fKgkDF"
              style={
                Object {
                  "height": "304px",
                }
              }
            >
              <div
                className="react-grid-item react-draggable cssTransforms Card__CardWrapper-v5r71h-0 SYfLr"
                content="My Facility Metrics"
                id="facility"
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                style={
                  Object {
                    "MozTransform": "translate(16px,16px)",
                    "OTransform": "translate(16px,16px)",
                    "WebkitTransform": "translate(16px,16px)",
                    "height": "272px",
                    "msTransform": "translate(16px,16px)",
                    "position": "absolute",
                    "touchAction": "none",
                    "transform": "translate(16px,16px)",
                    "width": "300px",
                  }
                }
                type="VALUE"
              >
                <div
                  className="card--header"
                >
                  <span
                    className="card--title"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    title="Facility Metrics"
                  >
                    <div
                      className="title--text"
                    >
                      Facility Metrics
                    </div>
                  </span>
                  <div
                    className="card--toolbar"
                  />
                </div>
                <div
                  className="Card__CardContent-v5r71h-1 ioQZbN"
                />
              </div>
              <div
                className="react-grid-item react-draggable cssTransforms Card__CardWrapper-v5r71h-0 HsjmT"
                content="My Humidity Values"
                id="humidity"
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                style={
                  Object {
                    "MozTransform": "translate(332px,16px)",
                    "OTransform": "translate(332px,16px)",
                    "WebkitTransform": "translate(332px,16px)",
                    "height": "128px",
                    "msTransform": "translate(332px,16px)",
                    "position": "absolute",
                    "touchAction": "none",
                    "transform": "translate(332px,16px)",
                    "width": "142px",
                  }
                }
                type="VALUE"
              >
                <div
                  className="card--header"
                >
                  <span
                    className="card--title"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    title="Humidity"
                  >
                    <div
                      className="title--text"
                    >
                      Humidity
                    </div>
                  </span>
                  <div
                    className="card--toolbar"
                  />
                </div>
                <div
                  className="Card__CardContent-v5r71h-1 cZyqBY"
                />
              </div>
              <div
                className="react-grid-item react-draggable cssTransforms Card__CardWrapper-v5r71h-0 HsjmT"
                content="My utilization chart"
                id="utilization"
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                style={
                  Object {
                    "MozTransform": "translate(490px,16px)",
                    "OTransform": "translate(490px,16px)",
                    "WebkitTransform": "translate(490px,16px)",
                    "height": "128px",
                    "msTransform": "translate(490px,16px)",
                    "position": "absolute",
                    "touchAction": "none",
                    "transform": "translate(490px,16px)",
                    "width": "142px",
                  }
                }
                type="VALUE"
              >
                <div
                  className="card--header"
                >
                  <span
                    className="card--title"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    title="Utilization"
                  >
                    <div
                      className="title--text"
                    >
                      Utilization
                    </div>
                  </span>
                  <div
                    className="card--toolbar"
                  />
                </div>
                <div
                  className="Card__CardContent-v5r71h-1 cZyqBY"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        className="info__show-button"
        onClick={[Function]}
        style={
          Object {
            "background": "#027ac5",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
    </div>
  </div>
</div>
`;
